# Cubesat-UI

./: .gitignore  CLAUDE.md  CMakeLists.txt  TELSTAR_documentacion.md
.claude/: settings.local.json
assets/Imagenes/: Imagenes.qrc
assets/qml/: Encabezado.qml  Main.qml  MenuDrawer.qml  Theme.qml
assets/qml/Componentes/: IndicadorLED.qml  PlaceholderPanel.qml  TarjetaDeDatos.qml
assets/qml/Layout/: Encabezado.qml  MenuDrawer.qml
assets/qml/Modulos/: Encabezado.qml  MenuDrawer.qml
assets/qml/Modulos/Componentes/: TarjetaDeDatos.qml
assets/qml/Modulos/Paneles/: EstadoMision.qml
assets/qml/Paneles/: EstadoMision.qml  PanelAcelerometro.qml  PanelAltitud.qml  PanelBateria.qml  PanelConsola.qml  PanelEstadoMision.qml  PanelGeolocalizacion.qml  PanelOrientacion.qml  PanelSensores.qml  PanelVelocidad.qml
assets/qml/Vistas/: VistaTelemetria.qml
src/: CsvWriter.cpp  CsvWriter.h  DataSimulator.cpp  DataSimulator.h  MadgwickFilter.cpp  MadgwickFilter.h  PacketParser.cpp  PacketParser.h  SerialManager.cpp  SerialManager.h  TelemetryData.cpp  TelemetryData.h  TelemetryPacket.h  VDescCalculator.cpp  VDescCalculator.h  main.cpp
tools/esp32_simulador/: esp32_simulador.ino
